# oblivion_plugins

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  generate_compile_commands.py  vcpkg.json
common/: CMakeLists.txt
common/include/: BranchTrampoline.h  FileUtils.h  GameTypes.h  HookUtils.h  LogUtils.h  PluginAPI.h  Relocation.h
common/src/: BranchTrampoline.cpp  FileUtils.cpp  HookUtils.cpp  LogUtils.cpp  safetyhook.cpp
common/unreal/: NameCollisions.inl  SDK.hpp  UnrealContainers.hpp
common/unreal/SDK/: ABP_Amulet_classes.hpp  ABP_Amulet_functions.cpp  ABP_Amulet_parameters.hpp  ABP_Amulet_structs.hpp  ABP_HairPostProcess_classes.hpp  ABP_HairPostProcess_functions.cpp  ABP_HairPostProcess_parameters.hpp  ABP_HairPostProcess_structs.hpp  ABP_HeadPostProcess_classes.hpp  ABP_HeadPostProcess_functions.cpp  ABP_HeadPostProcess_parameters.hpp  ABP_HeadPostProcess_structs.hpp  ABP_HumanoidHead_classes.hpp  ABP_HumanoidHead_functions.cpp  ABP_HumanoidHead_parameters.hpp  ABP_HumanoidHead_structs.hpp  ABP_InventoryCharacter_classes.hpp  ABP_InventoryCharacter_functions.cpp  ABP_InventoryCharacter_parameters.hpp  ABP_InventoryCharacter_structs.hpp  ABP_Reverse_Bow_classes.hpp  ABP_Reverse_Bow_structs.hpp  ABP_Reverse_FirstPerson_Humanoid_classes.hpp  ABP_Reverse_FirstPerson_Humanoid_functions.cpp  ABP_Reverse_FirstPerson_Humanoid_parameters.hpp  ABP_Reverse_FirstPerson_Humanoid_structs.hpp  ABP_Reverse_ThirdPerson_Humanoid_classes.hpp  ABP_Reverse_ThirdPerson_Humanoid_functions.cpp  ABP_Reverse_ThirdPerson_Humanoid_parameters.hpp  ABP_Reverse_ThirdPerson_Humanoid_structs.hpp  ACLPlugin_classes.hpp  AIModule_classes.hpp  AIModule_functions.cpp  AIModule_parameters.hpp  AIModule_structs.hpp  ALI_Blink_classes.hpp  ALI_Blink_functions.cpp  ALI_Blink_parameters.hpp  ALI_BodyPhysics_classes.hpp  ALI_BodyPhysics_functions.cpp  (+2347 more)
plugins/BetterInput/: CMakeLists.txt  export.def  main.cpp
